--- a/ecommerceapirest/src/main/resources/application.properties
+++ b/ecommerceapirest/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=ecommerceapirest
+server.port=8081
+
+# ===============================
+# DATABASE (PostgreSQL - Docker)
+# ===============================
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce_db
+spring.datasource.username=ecommerce_user
+spring.datasource.password=ecommerce_pass
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ===============================
+# JPA / HIBERNATE
+# ===============================
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
