--- a/ecommerceapirest/pom.xml
+++ b/ecommerceapirest/pom.xml
@@ -57,10 +57,10 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- MySQL (production) -->
+		<!-- PostgreSQL (production) -->
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 
